--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
 
         <activity android:name=".activity.MainActivity" />
         <activity android:name=".activity.SignUpActivity" />
+        <activity android:name=".activity.MyPageActivity" />
 
         <activity android:name=".activity.LoginActivity">
             <intent-filter>
