함께해요 xml파일 생성, 매니페스트 등록

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".activity.SignUpActivity" />
         <activity android:name=".activity.MyPageActivity" />
         <activity android:name=".activity.ModifyProfileActivity" />
+        <activity android:name=".activity.TogetherActivity" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
