[소켓 서비스] 알리메시지의 TaskStack parent 적용, 작성자와 메시지 내용 적용.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,13 +20,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
 
-        <activity android:name=".activity.RoomChatActivity" />
+        <activity
+            android:name=".activity.RoomChatActivity"
+            android:parentActivityName=".activity.TogetherActivity"/>
         <activity android:name=".activity.RoomCreateActivity" />
         <activity android:name=".activity.MainActivity" />
         <activity android:name=".activity.SignUpActivity" />
         <activity android:name=".activity.MyPageActivity" />
         <activity android:name=".activity.ModifyProfileActivity" />
-        <activity android:name=".activity.TogetherActivity" />
+        <activity android:name=".activity.TogetherActivity"/>
 
         <service
             android:name=".service.SocketService"
