--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,10 @@
             android:enabled="true"
             android:exported="true" />
 
+        <service
+            android:name=".service.ForcedTerminationService"
+            android:stopWithTask="false" />
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.action.outdooractivityapp.fileprovider"
