[위치공유 카카오맵] 1초마다 서버에서 같은방에 있는 사람들의 위치를 받아옴. 그 위치에 붉은색 마커 표시

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,10 @@
         <service
             android:name=".service.ForcedTerminationService"
             android:stopWithTask="false" />
+        <service
+            android:name=".service.LocationSharingService"
+            android:enabled="true"
+            android:exported="true" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
