[같은방 유저 리스트] 같은방 유저목록 리스트 완성

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         <activity android:name=".activity.MyPageActivity" />
         <activity android:name=".activity.ModifyProfileActivity" />
         <activity android:name=".activity.TogetherActivity" />
+        <activity android:name=".activity.TogetherUserListActivity" />
 
         <service
             android:name=".service.SocketService"
