--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,11 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <!-- 카카오맵 관련 권한 -->
+    <uses-permission android:name="android.permission.RECORD_AUDIO" /> <!-- 카카오맵 관련 권한 -->
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
-    <!-- usesCleartextTraffic을 true로하여 http로의 접근을 허용시키자 -->
     <application
         android:name=".AdminApplication"
         android:allowBackup="true"
@@ -24,10 +22,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".activity.LocationSharingMap"></activity>
-        <!-- 카카오맵 키 -->
+        android:theme="@style/AppTheme.NoActionBar"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".activity.TrackingBoardViewActivity"></activity>
+        <activity android:name=".activity.TrackingBoardActivity" />
+        <activity android:name=".activity.LocationSharingMap" /> <!-- 카카오맵 키 -->
         <meta-data
             android:name="com.kakao.sdk.AppKey"
             android:value="3bfa41e8efe4a762addb8f916383517f" />
