--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
         <activity android:name=".activity.ModifyProfileActivity" />
         <activity android:name=".activity.TogetherActivity" />
         <activity android:name=".activity.TogetherUserListActivity" />
+        <activity android:name=".activity.TrackingBoardPrivateActivity" />
 
         <service
             android:name=".service.SocketService"
