--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,12 +12,29 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        externalNativeBuild {
+            cmake {
+                arguments "-DANDROID_STL=c++_shared", "-DANDROID_TOOLCHAIN=clang"
+                cppFlags "-std=c++11 -fexceptions"
+            }
+        }
+        ndk {
+//            abiFilters "arm64-v8a"
+        }
     }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    externalNativeBuild {
+        cmake {
+            path "src/main/cpp/CMakeLists.txt"
+            version "3.10.2"
         }
     }
 
@@ -38,5 +55,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation "de.hdodenhof:circleimageview:3.0.0"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation project(path: ':opencv')
+
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.libraries.places:places:2.1.0'
+    implementation project(path: ':ODsayAndroidSDK')
 
 }
